Minor continued work on responsive iframe. Trying to prevent it from stretching too high.

--- a/style.scss
+++ b/style.scss
@@ -118,12 +118,20 @@ main {
 }
 
 .videowrapper {
-    min-height: 200px;
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    position: relative;
+    height: 0;
+    max-width: 900px;
 }
 
-iframe {
+.videowrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    min-height: 200px;
+    height: 100%;
     border: 0;
 }
 
@@ -253,21 +261,6 @@ iframe {
             margin-left: auto;
             margin-right: auto;
         }
-    }
-
-    .videowrapper {
-        overflow: hidden;
-        padding-top: 56.25%;
-        position: relative;
-    }
-
-    .videowrapper iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border: 0;
     }
 
 }
